# notion-automator

./: .gitignore  Makefile  README.md
ci/make/: app.Makefile  app.mk  root.Makefile  root.mk  tf.Makefile  tf.mk
daily-task-rotator/: Makefile  README.md  pyproject.toml
daily-task-rotator/sandbox/: app.py
daily-task-rotator/src/: main.py
daily-task-rotator/src/rotator/: daily_task_rotator.py  util.py
daily-task-rotator/terraform/: backend.tf  main.tf
daily-task-rotator/tests/resources/: multiple_tasks_due_yesterday.json
daily-task-watcher/: pyproject.toml
notion-automator/daily-task-rotator/: Makefile  README.md  pyproject.toml
notion-automator/daily-task-rotator/src/: main.py
notion-automator/daily-task-rotator/src/rotator/: config.py  daily_task_rotator.py  task.py  util.py
notion-automator/daily-task-rotator/terraform/: iam.tf  main.tf  provider.tf
notion-automator/daily-task-rotator/tests/resources/: single_task_due_yesterday.json
notion-automator/sprint-rotator/src/: main.py
sandbox/todoist/: pyproject.toml
sandbox/todoist/src/: main.py
sprint-rotator/: pyproject.toml
terraform-common/: backend.tf  main.tf  provider.tf
